--- a/frontend/src/components/footer/footer.module.scss
+++ b/frontend/src/components/footer/footer.module.scss
@@ -1,5 +1,7 @@
+@import "../../global.module.scss";
+
 .footerContainer {
-  background-color: navy;
+  background-color: $main_color;
   height: 650px;
   width: 100%;
 
@@ -9,7 +11,7 @@
 
   .subFooterContainer {
     align-items: center;
-    background-color: gray;
+    background-color: $third_color;
     border-radius: 4px;
     display: flex;
     height: 28px;
