--- a/frontend/src/components/carousel/carousel.module.scss
+++ b/frontend/src/components/carousel/carousel.module.scss
@@ -1,4 +1,7 @@
+@import "../../global.module.scss";
+
 .carouselContainer {
+  background-color: $secondary_color;
   height: 300px;
   width: 100%;
 }
