--- a/frontend/src/global.module.scss
+++ b/frontend/src/global.module.scss
@@ -1,19 +1,21 @@
 /* This stylesheet contains global styles and color/sizing values */
 
-// Global Styles
-* {
-  margin: 0;
-  padding: 0;
-}
-
 // Global Theme Variables
 
 // Colors
-$main_color: #f7f7f7;
-$secondary_color: #3d5297;
+$main_color: #151f28;
+$secondary_color: #ffffff;
+$third_color: #c5c5c5;
 $border_color: #f1f1f1;
 $link_color: #425281;
 $input_borderColor: #747882;
 
 // Fonts
 $main_font: "helvetica";
+
+// Global Styles
+* {
+  margin: 0;
+  padding: 0;
+  font-family: $main_font;
+}
