--- a/frontend/src/components/display/display.module.scss
+++ b/frontend/src/components/display/display.module.scss
@@ -2,6 +2,170 @@
 
 .displayContainer {
   background-color: $secondary_color;
-  height: 650px;
+  height: 850px;
   width: 100%;
+  overflow: hidden;
+
+  .giftCardsContainer {
+    cursor: default;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    justify-content: center;
+
+    .giftCards {
+      background-color: $main_color;
+      border-radius: 8px;
+      display: flex;
+      height: 65px;
+      width: 85%;
+      justify-content: space-between;
+      align-items: center;
+      p {
+        color: $secondary_color;
+        padding: 16px;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      a:hover {
+        transition: 0.5s ease;
+        text-decoration: underline;
+        text-decoration-color: $third_color;
+        text-decoration-style: dashed;
+      }
+    }
+  }
+
+  .displayKitContainer {
+    display: flex;
+    height: 850px;
+    width: 90%;
+    justify-content: center;
+
+    > img {
+      padding: 75px 0px;
+      width: 90%;
+    }
+
+    .textContainer {
+      display: flex;
+      height: 850px;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      font-weight: bolder;
+      font-size: 3rem;
+
+      a {
+        color: black;
+        text-decoration: none;
+      }
+
+      a:hover {
+        transition: 0.5s ease;
+        text-decoration: underline;
+        text-decoration-color: $third_color;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .displayContainer {
+    .giftCardsContainer {
+      margin-bottom: 20px;
+
+      .giftCards {
+        background-color: $main_color;
+        border-radius: 8px;
+        display: flex;
+        width: 85%;
+        justify-content: space-between;
+        align-items: center;
+        p {
+          color: $secondary_color;
+          padding: 16px;
+          text-align: center;
+        }
+      }
+    }
+
+    .displayKitContainer {
+      display: block;
+      height: 90%;
+      width: 100%;
+
+      > img {
+        padding: 80px 0px;
+        width: 100%;
+      }
+
+      .textContainer {
+        display: flex;
+        height: 50%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        font-weight: bolder;
+        font-size: 2rem;
+
+        > a {
+          color: black;
+          text-decoration: none;
+        }
+
+        > a:hover {
+          transition: 0.5s ease;
+          text-decoration: underline;
+          text-decoration-color: $third_color;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1475px) {
+  .displayContainer {
+    margin-bottom: 80px;
+    .giftCardsContainer {
+      .giftCards {
+        background-color: $main_color;
+        border-radius: 8px;
+        display: flex;
+        width: 85%;
+        justify-content: space-between;
+        align-items: center;
+        p {
+          color: $secondary_color;
+          padding: 16px;
+          text-align: center;
+        }
+      }
+    }
+
+    .displayKitContainer {
+      display: block;
+      height: 75%;
+      width: 100%;
+      text-align: center;
+
+      > img {
+        padding: 40px 20px;
+        width: 50%;
+      }
+
+      .textContainer {
+        display: flex;
+        height: 50%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        font-weight: bolder;
+        font-size: 2rem;
+      }
+    }
+  }
 }
