--- a/frontend/src/components/header/header.module.scss
+++ b/frontend/src/components/header/header.module.scss
@@ -1,8 +1,11 @@
 @import "../../global.module.scss";
 
 .headerContainer {
-  height: 56px;
+  height: 50px;
   width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 3;
 
   .topHeader {
     background-color: $third_color;
