--- a/frontend/src/components/carousel/carousel.module.scss
+++ b/frontend/src/components/carousel/carousel.module.scss
@@ -2,6 +2,84 @@
 
 .carouselContainer {
   background-color: $secondary_color;
-  height: 500px;
+  height: 575px;
   width: 100%;
+
+  p {
+    cursor: default;
+    font-size: 2.25rem;
+    font-weight: bold;
+  }
+
+  .carouselTxtWrapper {
+    align-items: center;
+    display: flex;
+    height: 20%;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .carouselWrapper {
+    display: flex;
+    height: 60%;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .carouselLeft {
+    cursor: default;
+    padding-left: 3rem;
+  }
+
+  .carouselMiddle {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: hidden;
+    .carouselItemContainer {
+      border: 0.1rem solid black;
+      border-radius: 1rem;
+      padding: 15px 1px;
+      transition: 1s ease-in-out;
+      p {
+        font-weight: normal;
+        font-size: 1.75rem;
+        padding: 6px;
+        text-align: center;
+      }
+      .carouselImg {
+        width: 300px;
+        height: 250px;
+      }
+    }
+
+    .carouselItemContainer:hover {
+      transform: scale(1.0125);
+    }
+  }
+
+  .carouselRight {
+    cursor: default;
+    padding-right: 3rem;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .carouselMiddle {
+    .carouselItemContainer {
+      p {
+        font-weight: normal;
+        font-size: 1.75rem;
+        padding: 6px;
+        text-align: center;
+      }
+      .carouselImg {
+        width: 100px;
+        height: 50px;
+      }
+    }
+  }
 }
