--- a/frontend/src/components/display/display.module.scss
+++ b/frontend/src/components/display/display.module.scss
@@ -13,6 +13,10 @@
     width: 100%;
     justify-content: center;
 
+    a {
+      color: $secondary_color;
+    }
+
     .giftCards {
       background-color: $main_color;
       border-radius: 8px;
@@ -47,7 +51,12 @@
 
     > img {
       padding: 75px 0px;
+      transition: 0.75s ease-in-out;
       width: 90%;
+    }
+
+    > img:hover {
+      transform: rotate(-2deg);
     }
 
     .textContainer {
@@ -101,6 +110,10 @@
       > img {
         padding: 80px 0px;
         width: 100%;
+      }
+
+      > img:hover {
+        transform: none !important;
       }
 
       .textContainer {
