--- a/frontend/src/components/footer/footer.module.scss
+++ b/frontend/src/components/footer/footer.module.scss
@@ -72,6 +72,11 @@
     > p {
       font-weight: bolder;
     }
+
+    .subFooterTxtMain {
+      padding-left: 7px;
+      text-wrap: nowrap;
+    }
   }
 
   .paymentMethodContainer {
